Refactory structure to insert navigation, and refactory header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pragati+Narrow&family=Quicksand:wght@300&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <div id="root"></div>
+  <body id="root">
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
